# sitewatch

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  app.py  docker-start  format  lint  logs  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  save-aiven-creds  start  test
.github/workflows/: deploy.yml  google.yml  python-app.yml  test.yml
sitewatch/: __init__.py  __main__.py  context.py  db.py  kafka.py  log.py  model.py
tests/: test_db.py  test_main.py  test_model.py  test_watch.py
tests/snapshots/: snap_test_main.py  snap_test_model.py  snap_test_watch.py
typings/triopg/: __init__.pyi  _triopg.pyi  exceptions.pyi
