[tool.poetry]
name = "sitewatch"
version = "0.1.0"
description = ""
authors = ["Alexey Shamrin <shamrin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
