[tool.poetry]
name = "sitewatch"
version = "0.1.0"
description = ""
authors = ["Alexey Shamrin <shamrin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.16.1"
asyncpg = "^0.21.0"
aiokafka = "^0.7.0"
aiven-client = "^2.9.0"
trio = "^0.17.0"
trio-asyncio = "^0.11.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.2.1"
snapshottest = "^0.6.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py38']
skip-string-normalization = true
exclude='/tests/snapshots/'
